Add shortcut keys

--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,8 @@
 <body style="padding: 0.5em;">
     <div><textarea class="browser-style" name="urls" autofocus="true" id="urls" placeholder="Enter one address per line" rows="10" cols="80" style="resize:none"></textarea></div>
     <div>
-        <button class="browser-style" name="openFromTextArea" id="openFromTextArea" type="button">Open</button>
-        <button class="browser-style" name="pasteAndOpenFromTextArea" id="pasteAndOpenFromTextArea" type="button">Paste and open</button>
+        <button class="browser-style" name="openFromTextArea" id="openFromTextArea" type="button">Open <span class="text-shortcut"></span></button>
+        <button class="browser-style" name="pasteAndOpenFromTextArea" id="pasteAndOpenFromTextArea" type="button">Paste and open <span class="text-shortcut"></span></button>
     </div>
 </body>
 </html>
