--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Open Multiple Addresses</title>
     <script src="popup.js" type="text/javascript" charset="utf-8" async defer></script>
+    <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
-<body style="padding: 0.5em;">
-    <div><textarea class="browser-style" name="urls" autofocus="true" id="urls" placeholder="Enter one address per line" rows="10" cols="80" style="resize:none"></textarea></div>
+<body>
+    <div><textarea class="browser-style" name="urls" autofocus="true" id="urls" placeholder="Enter one address per line" rows="10" cols="80"></textarea></div>
     <div>
         <button class="browser-style" name="openFromTextArea" id="openFromTextArea" type="button">Open <span class="text-shortcut"></span></button>
         <button class="browser-style" name="pasteAndOpenFromTextArea" id="pasteAndOpenFromTextArea" type="button">Paste and open <span class="text-shortcut"></span></button>
