Fix script loading

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Open Multiple Addresses</title>
-    <script src="popup.js" type="text/javascript" charset="utf-8" async defer></script>
+    <script src="popup.js" type="text/javascript" charset="utf-8" defer></script>
     <link rel="stylesheet" href="chrome://global/skin/in-content/common.css" />
     <link rel="stylesheet" type="text/css" href="popup.css" />
   </head>
