--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,6 @@
   <body>
     <div>
       <textarea
-        class="browser-style"
         name="urls"
         autofocus="true"
         id="urls"
@@ -21,14 +20,14 @@
     </div>
     <div>
       <button name="openFromTextArea" id="openFromTextArea">
-        <span part="button" class="button-background labelled" type="default" size="default">
-          <label> Open </label>
+        <span class="button-background labelled">
+          <label>Open</label>
           <label class="text-shortcut"> </label>
         </span>
       </button>
       <button name="pasteAndOpenFromTextArea" id="pasteAndOpenFromTextArea">
-        <span part="button" class="button-background labelled" type="default" size="default">
-          <label> Paste and Open </label>
+        <span class="button-background labelled">
+          <label>Paste and Open</label>
           <label class="text-shortcut"> </label>
         </span>
       </button>
